--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - docker buildx build
     --platform $PLATFORMS
     --build-arg "VERSION=$TRAVIS_BRANCH"
-    --file "$VARIANT/Dockerfile"
+    --file "Dockerfile"
     --tag sckyzo/octoprint:$TRAVIS_BRANCH-$VARIANT
     `if [ -n "$TRAVIS_TAG" ]; then echo "--tag sckyzo/octoprint:$VARIANT"; fi`
     `if [ -n "$TRAVIS_TAG" ] && [ "$VARIANT" = "alpine" ]; then echo "--tag sckyzo/octoprint:latest"; fi`
